# cleanwalkerrobotics

./: .gitignore  CLAUDE.md  CODEBASE.md  LICENSE  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.crew/: orchestration.md  phase-1.md
.crew/roles/: biz-dev.md  ceo.md  communications.md  cto.md  finance.md  manufacturing.md  procurement.md
.github/ISSUE_TEMPLATE/: general.yml  hardware.yml  software.yml
.github/workflows/: ci.yml  hardware.yml
apps/dashboard/: next.config.ts  package.json  postcss.config.mjs
apps/web/: MANIFEST.md  PURPOSE.md  next.config.ts  package.json  tsconfig.tsbuildinfo
docs/: MANIFEST.md  PURPOSE.md  assembly-iteration-costs.md  certification-pilot-costs.md  competitive-landscape-research.md  contract-manufacturing-research.md  hardware-bom-research.md  logistics-transport-costs.md  market-research-americas.md  market-research-asia-pacific.md  market-research-competitive-landscape.md  market-research-europe.md  market-research-global-synthesis.md  market-research-mena-africa.md  market-research.md  ml-compute-costs.md  pilot-financial-model.md  product-spec-research.md
docs/architecture/: README.md
docs/ceo/: contacts.md  decisions-log.md  follow-up-templates.md  grant-opportunities.md  grant-research.md  outreach-emails-additional.md  outreach-emails.md  outreach-tracker.md  revised-financial-model.md  strategy.md
docs/design/: component-decisions.md  robot-design-spec.md
docs/ops/: email-webhook-setup.md
docs/regulatory/: README.md
docs/research/: cad-pipeline-analysis.md  codebase-knowledge-management.md  depth-camera-hardware-2026.md  depth-estimation-sota-2026.md  depth-grasp-cameras-2026.md  edge-detection-sota-2026.md  eu-machinery-regulation-compliance.md  grasp-planning-systems-2026.md  industrial-grade-cost-analysis.md  openclaw-callback-reliability.md  perception-stack-depth-grasp-cameras.md  semantic-segmentation-sota-2026.md  unitree-go2-platform-analysis.md  unitree-opensource-reusability-analysis-2026.md  visual-slam-vo-research-2026.md
docs/sales/: README.md  pitch-deck.md  pricing-sheet.md  render-prompts.md  white-paper-autonomous-litter-collection.md
docs/technical/: autonomy-stack-architecture.md  perception-demo-options.md  perception-pipeline-architecture.md  render-pipeline-research.md
firmware/: Cargo.toml  MANIFEST.md  PURPOSE.md
firmware/comms/: Cargo.toml
firmware/controller/: Cargo.toml
firmware/controller/src/: lib.rs  main.rs
firmware/motor-driver/: Cargo.toml
firmware/ros2/: README.md
firmware/ros2/cleanwalker_description/: package.xml  setup.cfg  setup.py
firmware/ros2/cleanwalker_description/launch/: display.launch.py
firmware/ros2/cleanwalker_description/urdf/: cleanwalker_cw1.urdf
firmware/ros2/cleanwalker_manipulation/: package.xml  setup.cfg  setup.py
firmware/ros2/cleanwalker_manipulation/cleanwalker_manipulation/: arm_controller_node.py
firmware/ros2/cleanwalker_manipulation/nodes/: grasp_planner_node.py
firmware/ros2/cleanwalker_navigation/: package.xml  setup.cfg  setup.py
firmware/ros2/cleanwalker_navigation/cleanwalker_navigation/: path_planner_node.py  slam_node.py
firmware/ros2/cleanwalker_perception/: package.xml  setup.cfg  setup.py
firmware/ros2/cleanwalker_perception/cleanwalker_perception/: depth_node.py  detection_node.py  segmentation_node.py
firmware/ros2/cleanwalker_perception/msg/: Detection.msg  LitterItem.msg
hardware/: MANIFEST.md  PURPOSE.md
hardware/bom/: README.md  bom-template.csv
hardware/cad-agent/: .gitignore  CLAUDE.md  README.md  design_description.md  iteration_log.md
hardware/urdf/: README.md  (+2 more)
ml/: MANIFEST.md  PURPOSE.md  README.md  demo_webcam.py
ops/: ASSEMBLY.md  team-log.md  team-status.json  workflow-assessment.md
scripts/: blender-render.py  check-codebase-knowledge.mjs  check-demo-registry.mjs  check-manifests.mjs  export-glb.mjs  generate-codebase-map.mjs  generate-pdfs.sh  generate-render.sh  generate-renders-v3.sh  generate-renders.mjs  generate-renders.py  invalidate-og-cache.mjs  regenerate-renders.mjs  screenshot.mjs  team-callback.sh
services/: PURPOSE.md
(+174 files in other folders)
