<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cleanwalker_navigation</name>
  <version>0.1.0</version>
  <description>Navigation and SLAM nodes for CleanWalker CW-1: cuVSLAM wrapper, coverage path planning</description>
  <maintainer email="engineering@cleanwalkerrobotics.com">CleanWalker Robotics</maintainer>
  <license>AGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
